--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,26 +11,25 @@
     <link rel="stylesheet" href="{{ url_for('static', path='vendor/fontawesome/fontawesome-free-6.4.0-web/css/all.min.css') }}">
 
 
-    {% if ENVIRONMENT == "production" %}
-      <!--Bundled (esbuild output) -->
-      <link rel="stylesheet" href="{{ url_for('static', path='dist/index.css') }}">
-      {% else %}
-      <!-- 🧩 Development: separate CSS/JS files -->
-      <link rel="stylesheet" href="{{ url_for('static', path='css/palette.css') }}">
-      <link rel="stylesheet" href="{{ url_for('static', path='css/main.css') }}">
-      <link rel="stylesheet" href="{{ url_for('static', path='css/home.css') }}">
-      <link rel="stylesheet" href="{{ url_for('static', path='css/login.css') }}">
-      <link rel="stylesheet" href="{{ url_for('static', path='css/register.css') }}">
-      <link rel="stylesheet" href="{{ url_for('static', path='css/profile.css') }}">
-      <link rel="stylesheet" href="{{ url_for('static', path='css/forgot_password.css') }}">
-      <link rel="stylesheet" href="{{ url_for('static', path='css/analytics.css') }}">
-      <link rel="stylesheet" href="{{ url_for('static', path='css/modal.css') }}">
-      <link rel="stylesheet" href="{{ url_for('static', path='css/alert.css') }}">
-      
-      <script src="{{ url_for('static', path='js/main.js') }}" defer></script>
-      <script src="{{ url_for('static', path='js/home.js') }}" defer></script>
-      <script src="{{ url_for('static', path='js/profile.js') }}" defer></script>
-      <script src="{{ url_for('static', path='js/forgot_password.js') }}" defer></script>
+    <!-- ✅ USE DEVELOPMENT STYLE IN BOTH ENVIRONMENTS -->
+    <link rel="stylesheet" href="{{ url_for('static', path='css/palette.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='css/main.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='css/home.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='css/login.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='css/register.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='css/profile.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='css/forgot_password.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='css/analytics.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='css/modal.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='css/alert.css') }}">
+
+    <script src="{{ url_for('static', path='js/main.js') }}" defer></script>
+    <script src="{{ url_for('static', path='js/home.js') }}" defer></script>
+    <script src="{{ url_for('static', path='js/profile.js') }}" defer></script>
+    <script src="{{ url_for('static', path='js/forgot_password.js') }}" defer></script>
+    <script src="{{ url_for('static', path='js/login.js') }}" defer></script>
+    <script src="{{ url_for('static', path='js/register.js') }}" defer></script>
+    <script src="{{ url_for('static', path='js/bajeti.js') }}" defer></script>
       {% endif %}
     </head>
     
@@ -62,6 +61,12 @@
       <main>
         {% block content %}{% endblock %}
       </main>
-      <script src="{{ url_for('static', path='dist/index.js') }}" defer></script>
+      <script src="{{ url_for('static', path='js/main.js') }}" defer></script>
+      <script src="{{ url_for('static', path='js/home.js') }}" defer></script>
+      <script src="{{ url_for('static', path='js/profile.js') }}" defer></script>
+      <script src="{{ url_for('static', path='js/forgot_password.js') }}" defer></script>
+      <script src="{{ url_for('static', path='js/login.js') }}" defer></script>
+      <script src="{{ url_for('static', path='js/register.js') }}" defer></script>
+      <script src="{{ url_for('static', path='js/bajeti.js') }}" defer></script>
   </body>
 </html>
